--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,7 +27,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Serie A Mern</title>
+  <title>Serie A Social</title>
 </head>
 
 <body>
