--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,8 +3,7 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="../../client/src//images//logos/seria-a.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+ <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -13,6 +12,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@1,300&family=Manrope&family=Quicksand&family=Sora&display=swap"
     rel="stylesheet">
+    
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
